<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_sun_24"
            style="@style/icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/theme_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/theme_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_auto" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/theme_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_light" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/theme_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_dark" />
    </RadioGroup>

</LinearLayout>